--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -454,7 +454,7 @@ ol.overflow {
   clear: both;
 
   & > li:last-of-type {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   &:after {
